--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ plugins:
   - jekyll-feed
 
 collections:
-  datacollections:
+  collections:
     output: true
     permalink: /collection/:name/
 # Exclude from processing.
