--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -1,8 +1,8 @@
-- id: "chosen-by-our-experts"
-  type: "collection"
+# - id: "chosen-by-our-experts"
+#   type: "collection"
 
 - id: "kemeja"
   type: "collection"
 
-- id: "outfit-kemeja"
+- id: "topi"
   type: "collection"
