--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: Your awesome title
-email: your-email@example.com
+title: HERWEARS
 description: Gaya modern, nyaman digunakan.
+logo: /assets/images/himwears.png
+email: your-email@example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://herwears.pages.dev"
 twitter_username: jekyllrb
 github_username: jekyll
 
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
 
@@ -15,22 +15,3 @@ collections:
   collections:
     output: true
     permalink: /collection/:name/
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
