--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: HERWEARS
+title: HERWEARS.ID
 description: Gaya modern, nyaman digunakan.
 logo: /assets/images/himwears.png
 email: your-email@example.com
